--- a/zoom-app/src/main/resources/application.properties
+++ b/zoom-app/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=zoom-web-check
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
